# brioche

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yaml
.zed/: settings.json
butter/: convert_onnx_to_half.py  depth_pro_dummy_model.py  pyproject.toml  state_exporter.py  vit_exporter.py
examples/: sample.rs
src/: brioche_seq.rs  colors.rs  four.rs  lib.rs  utils.rs
src/model/: mod.rs
src/network/: mod.rs
src/network/decoder/: feature_fusion_block_2d.rs  mod.rs  multires_conv.rs  residual_block.rs
src/network/encoder/: mod.rs  projection_seq.rs
src/network/fov/: encoder_seq.rs  mod.rs  sequential.rs
src/network/vit/: mod.rs
src/vit/: common.rs  fov.rs  mod.rs  patch.rs
testdata/tensors_data/fov/: lowres_feature.npy
