[package]
name = "brioche"
version = "0.1.0"
edition = "2024"

[dependencies]
ndarray = { version = "0.17.2" }
ndarray-stats = "0.7.0"
burn = { version = "0.20.1", features = [
    "std",
    "wgpu",
    "fusion",
    "record-item-custom-serde",
], default-features = false }
anyhow = "1.0.100"
ort = { version = "=2.0.0-rc.11", features = ["half"] }
burn-import = { version = "0.20.1", features = ["pytorch"] }
image = "0.25.9"
colorgrad = { version = "0.8.0", features = ["preset"] }
ndarray-npy = "0.10.0"
burn-store = { version = "0.20.1", features = ["burnpack"] }

[dev-dependencies]
clap = { version = "4.5.56", features = ["derive"] }
rand = "0.9.2"

[build-dependencies]
burn-import = "0.20.1"

[features]
default = []
metal = ["burn/metal"]
cuda = ["burn/cuda"]
wgpu = ["burn/wgpu"]
rocm = ["burn/rocm"]

[[example]]
name = "sample_metal"
path = "examples/sample.rs"
required-features = ["metal"]

[[example]]
name = "sample_cuda"
path = "examples/sample.rs"
required-features = ["cuda"]
